--- a/templates/alter.tmpl
+++ b/templates/alter.tmpl
@@ -1,8 +1,8 @@
 package migrations
 
 import (
-	"perturabo/alter"
-	"perturabo/facades"
+	"github.com/knyazev-ro/perturabo/alter"
+	"github.com/knyazev-ro/perturabo/facades"
 )
 
 var {{.MigrationNameVar}} = facades.NewMigration("{{.MigrationName}}", func(m *facades.Migration) {
