--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -1,9 +1,9 @@
 package migrations
 
 import (
-	"perturabo/create"
-	"perturabo/facades"
-	"perturabo/types"
+	"github.com/knyazev-ro/perturabo/create"
+	"github.com/knyazev-ro/perturabo/facades"
+	"github.com/knyazev-ro/perturabo/types"
 )
 
 var {{.MigrationNameVar}} = facades.NewMigration("{{.MigrationName}}", func(m *facades.Migration) { 
